// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Header EC renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ec"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="european commission logo"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/ec/images/logo/logo-ec--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <div
          class="bcl-header__site-name"
        >
          Project name
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Very long label with custom text and custom link as an example
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--ec modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe"
                      />
                    </svg>
                    <h5
                      class="mb-0 ms-2"
                    >
                      Select your language
                    </h5>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--ec"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    EU official languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="#"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
                <div
                  class="pb-2"
                >
                  <h5
                    class="mb-4"
                  >
                    Other languages
                  </h5>
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="zh"
                        lang="zh"
                      >
                        中文
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="tr"
                        lang="tr"
                      >
                        Türk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ru"
                        lang="ru"
                      >
                        pусский
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ca"
                        lang="ca"
                      >
                        Català
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ar"
                        lang="ar"
                      >
                        عَرَبِيّ
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header EU renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--eu"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop project logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile project logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <img
          alt="project logo"
          class="d-none d-lg-inline-block"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
        />
        <div
          class="bcl-header__site-name"
        >
          Project name
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--eu modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-fullscreen"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="container"
          >
            <div
              class="border-bottom mx-n3 px-3 px-md-0 pt-md-4-5"
            >
              <div
                class="py-3-5 px-3 px-sm-0 px-md-3"
              >
                <div
                  class="d-flex justify-content-between align-items-center"
                >
                  <div
                    class="d-flex align-items-center"
                  >
                    <svg
                      class="bi icon--s"
                    >
                      <use
                        xlink:href="/icons.svg#globe"
                      />
                    </svg>
                    <h5
                      class="mb-0 ms-2"
                    >
                      Select your language
                    </h5>
                  </div>
                  <button
                    aria-label="Close"
                    class="btn-close"
                    data-bs-dismiss="modal"
                    type="button"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--eu"
          >
            <div
              class="main pt-4"
            >
              <div
                class="container"
              >
                <div
                  class="pb-2"
                >
                  <div
                    class="row"
                  >
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="bg"
                        lang="bg"
                      >
                        български
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="es"
                        lang="es"
                      >
                        español
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="cs"
                        lang="cs"
                      >
                        čeština
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="da"
                        lang="da"
                      >
                        dansk
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="de"
                        lang="de"
                      >
                        Deutsch
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="et"
                        lang="et"
                      >
                        eesti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="el"
                        lang="el"
                      >
                        ελληνικά
                      </a>
                      <a
                        class="w-100 mb-2-5 btn selected justify-content-between"
                        href="#"
                        hreflang="en"
                        lang="en"
                      >
                        English
                        <svg
                          class="ms-2-5 bi icon--s"
                        >
                          <use
                            xlink:href="/icons.svg#check2"
                          />
                        </svg>
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="fr"
                        lang="fr"
                      >
                        français
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ga"
                        lang="ga"
                      >
                        Gaeilge
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="hr"
                        lang="hr"
                      >
                        hrvatski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="it"
                        lang="it"
                      >
                        italiano
                      </a>
                    </div>
                    <div
                      class="col-12 col-md"
                    >
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="lv"
                        lang="lv"
                      >
                        latviešu
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="lt"
                        lang="lt"
                      >
                        lietuvių
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="hu"
                        lang="hu"
                      >
                        magyar
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="mt"
                        lang="mt"
                      >
                        Malti
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="nl"
                        lang="nl"
                      >
                        Nederlands
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="pl"
                        lang="pl"
                      >
                        polski
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="pt"
                        lang="pt"
                      >
                        português
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="ro"
                        lang="ro"
                      >
                        română
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sk"
                        lang="sk"
                      >
                        slovenčina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sl"
                        lang="sl"
                      >
                        slovenščina
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="fi"
                        lang="fi"
                      >
                        suomi
                      </a>
                      <a
                        class="w-100 mb-2-5 btn justify-content-start"
                        href="#"
                        hreflang="sv"
                        lang="sv"
                      >
                        svenska
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header Neutral renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--neutral"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="project logo"
            src="https://inno-ecl.s3.amazonaws.com/media/examples/placeholder.svg"
          />
          <div
            class="h5 ms-4-5 d-none d-lg-inline-block"
          >
            Project name
          </div>
        </a>
        <ul
          class="nav"
        >
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="d-none d-lg-block nav-link"
              href="#"
            >
              <svg
                class="me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#link"
                />
              </svg>
              Link
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#languageModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#chat-left-dots-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                English
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="text-center nav-link"
              data-bs-target="#loginModal"
              data-bs-toggle="modal"
              href="#"
            >
              <svg
                class="me-lg-2-5 bi icon--xs"
              >
                <use
                  xlink:href="/icons.svg#person-fill"
                />
              </svg>
              <span
                class="d-block d-lg-inline-block"
              >
                Log in
              </span>
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="notification mt-2 mt-lg-0 nav-link"
              href="#"
            >
              <svg
                class="bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#bell-fill"
                />
              </svg>
              <span
                class="badge bg-danger"
              >
                5
              </span>
            </a>
          </li>
        </ul>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project"
    >
      <div
        class="container"
      >
        <div
          class="bcl-header__site-name h5 d-inline-block d-lg-none"
        >
          Project name
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/example"
              >
                Home
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 01
              </a>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Item 02
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Dropdown link
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Another action
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Something else here
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
    <div
      class="container"
    >
      <nav
        aria-label="breadcrumb"
        class="mt-3"
      >
        <ol
          class="breadcrumb"
        >
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              Home
            </a>
          </li>
          <li
            class="breadcrumb-item d-none d-md-block"
          >
            <a
              href="/example"
            >
              European Commission
            </a>
          </li>
          <li
            class="breadcrumb-item"
          >
            <a
              href="/example"
            >
              <svg
                class="d-md-none ms-0 me-2 me-2-5 bi icon--s"
              >
                <use
                  xlink:href="/icons.svg#arrow-left"
                />
              </svg>
              About the European Commission
            </a>
          </li>
          <li
            aria-current="page"
            class="breadcrumb-item d-none d-md-block active"
          >
            News
          </li>
        </ol>
      </nav>
    </div>
  </header>
  <div
    aria-hidden="true"
    aria-labelledby="loginModalLabel"
    class="modal fade"
    id="loginModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <h5
            class="modal-title"
            id="loginModalLabel"
          >
            Log in
          </h5>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <h5>
            Disclaimer 1
          </h5>
          <p>
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum accumsan eget orci eu aliquet. Suspendisse potenti. Integer volutpat, nisl et placerat tincidunt
          </p>
          <h5>
            Disclaimer 2
          </h5>
          <p>
            Duis bibendum tristique lobortis. Nam luctus nisi sit amet turpis faucibus, ut dapibus elit sollicitudin. Phasellus a massa magna. Nullam ac imperdiet leo.
          </p>
        </div>
        <div
          class="modal-footer"
        >
          <button
            class="btn btn-secondary"
            data-bs-dismiss="modal"
            type="button"
          >
            Close
          </button>
          <button
            class="btn btn-primary"
            type="button"
          >
            Access EU login
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    aria-hidden="true"
    aria-labelledby="languageModalLabel"
    class="bcl-language-list-modal bcl-language-list-modal--neutral modal fade"
    id="languageModal"
    tabindex="-1"
  >
    <div
      class="modal-dialog modal-xl modal-fullscreen-md-down"
    >
      <div
        class="modal-content"
      >
        <div
          class="modal-header"
        >
          <div
            class="d-flex align-items-center"
          >
            <svg
              class="bi icon--s"
            >
              <use
                xlink:href="/icons.svg#globe"
              />
            </svg>
            <h5
              class="mb-0 ms-2"
            >
              Select your language
            </h5>
          </div>
          <button
            aria-label="Close"
            class="btn-close"
            data-bs-dismiss="modal"
            type="button"
          />
        </div>
        <div
          class="modal-body"
        >
          <div
            class="bcl-language-list bcl-language-list--neutral"
          >
            <div
              class="main pt-4"
            >
              <div
                class="pb-2"
              >
                <div
                  class="row"
                >
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="bg"
                      lang="bg"
                    >
                      български
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="es"
                      lang="es"
                    >
                      español
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="cs"
                      lang="cs"
                    >
                      čeština
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="da"
                      lang="da"
                    >
                      dansk
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="de"
                      lang="de"
                    >
                      Deutsch
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="et"
                      lang="et"
                    >
                      eesti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="el"
                      lang="el"
                    >
                      ελληνικά
                    </a>
                    <a
                      class="w-100 mb-2-5 btn selected justify-content-between"
                      href="#"
                      hreflang="en"
                      lang="en"
                    >
                      English
                      <svg
                        class="ms-2-5 bi icon--s"
                      >
                        <use
                          xlink:href="/icons.svg#check2"
                        />
                      </svg>
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="fr"
                      lang="fr"
                    >
                      français
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="ga"
                      lang="ga"
                    >
                      Gaeilge
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="hr"
                      lang="hr"
                    >
                      hrvatski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="it"
                      lang="it"
                    >
                      italiano
                    </a>
                  </div>
                  <div
                    class="col-12 col-md"
                  >
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="lv"
                      lang="lv"
                    >
                      latviešu
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="lt"
                      lang="lt"
                    >
                      lietuvių
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="hu"
                      lang="hu"
                    >
                      magyar
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="mt"
                      lang="mt"
                    >
                      Malti
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="nl"
                      lang="nl"
                    >
                      Nederlands
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="pl"
                      lang="pl"
                    >
                      polski
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="pt"
                      lang="pt"
                    >
                      português
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="ro"
                      lang="ro"
                    >
                      română
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="sk"
                      lang="sk"
                    >
                      slovenčina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="sl"
                      lang="sl"
                    >
                      slovenščina
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="fi"
                      lang="fi"
                    >
                      suomi
                    </a>
                    <a
                      class="w-100 mb-2-5 btn justify-content-start"
                      href="#"
                      hreflang="sv"
                      lang="sv"
                    >
                      svenska
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`OE - Header UCPKN renders correctly 1`] = `
<jest>
  <header
    class="bcl-header bcl-header--ucpkn"
  >
    <!-- navbar_settings -->
    <nav
      aria-label="Top Navigation"
      class="w-100 shadow-sm navbar navbar-expand-lg navbar-light"
    >
      <div
        class="container"
      >
        <a
          class="navbar-brand"
          href=""
        >
          <img
            alt="desktop european union logo"
            class="d-none d-lg-block"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/standard-version/positive/logo-eu--en.svg"
          />
          <img
            alt="mobile european union logo"
            class="d-lg-none"
            src="https://cdn1.fpfis.tech.ec.europa.eu/ecl/v3.0.2/eu/images/logo/condensed-version/positive/logo-eu--en.svg"
          />
        </a>
      </div>
    </nav>
    <!-- project name -->
    <div
      class="bcl-header__project light"
    >
      <div
        class="container"
      >
        <img
          alt="ucpkn logo"
          class="d-none d-lg-inline-block"
          src="ucpkn_logo.svg"
        />
        <div
          class="bcl-header__site-name"
        >
          UCP Knowledge Network: Applied knowledge for action
        </div>
      </div>
    </div>
    <!-- navbar -->
    <nav
      class="bcl-header__navbar navbar navbar-expand-lg navbar-dark"
    >
      <div
        class="container"
      >
        <button
          aria-controls="navbarNavDropdown"
          aria-expanded="false"
          aria-label="Toggle navigation"
          class="navbar-toggler"
          data-bs-target="#navbarNavDropdown"
          data-bs-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="me-auto navbar-nav"
          >
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLink"
                role="button"
              >
                Knowledge & Capacity
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLink"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Knowledge Network Capacity Development Pillar
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Disaster Prevention and Risk Management
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Disaster Preparedness
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Emergency Response Coordination Centre
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    UCPM Lessons Learnt Programme
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLinkSecond"
                role="button"
              >
                Science & Research
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLinkSecond"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Knowledge Network Science Pillar
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Disaster Risk Management Knowledge Centre
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Knowledge Gaps
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Data & Tools
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLinkThird"
                role="button"
              >
                Projects
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLinkThird"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Union Civil Protection Mechanism Projects
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Other Disaster Risk Management Projects
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    EU funding for disaster management
                  </a>
                </li>
              </ul>
            </li>
            <li
              class="nav-item"
            >
              <a
                class="nav-link"
                href="/example"
              >
                Stories
              </a>
            </li>
            <li
              class="nav-item dropdown"
            >
              <a
                aria-expanded="false"
                class="nav-link dropdown-toggle"
                data-bs-toggle="dropdown"
                href="#"
                id="navbarDropdownMenuLinkProjects"
                role="button"
              >
                About
              </a>
              <ul
                aria-labelledby="navbarDropdownMenuLinkProjects"
                class="dropdown-menu"
              >
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Knowledge Network Governance
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    The EU Civil Protection Mechanism
                  </a>
                </li>
                <li>
                  <a
                    class="dropdown-item"
                    href="/example.html"
                  >
                    Information pack
                  </a>
                </li>
              </ul>
            </li>
          </ul>
          <form
            class="d-flex mt-3 mt-lg-0"
          >
            <label
              class="form-label visually-hidden"
              for="inlineFormInputGroupSearch"
            >
              Search
            </label>
            <input
              class="border-start-0 rounded-0 rounded-start form-control"
              id="inlineFormInputGroupSearch"
              placeholder="Search"
              required="true"
              type="text"
            />
            <button
              class="border-start-0 rounded-0 rounded-end btn btn-light btn-md"
              type="button"
            >
              <span
                class="visually-hidden"
              >
                search
              </span>
              <svg
                class="bi icon--fluid"
              >
                <use
                  xlink:href="/icons.svg#search"
                />
              </svg>
            </button>
          </form>
        </div>
      </div>
    </nav>
    <!-- breadcrumbs -->
  </header>
</jest>
`;
